lots of changes - provider profile, user flow etc

--- a/client/app/user/partials/consult_wf.html
+++ b/client/app/user/partials/consult_wf.html
@@ -3,12 +3,12 @@
 	<hr class="featurette-divider">
 	<div class="row">
 		<ul class="nav nav-pills">
-		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><span class="glyphicon glyphicon-tag" aria-hidden="true">Appt</span></a></li>
-		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.payment({ cref: wf._id })"><span class="glyphicon glyphicon-eur" aria-hidden="true">Payment</span></a></li>
-		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.questions({ cref: wf._id })"><span class="glyphicon glyphicon-tasks" aria-hidden="true">Questions</span></a></li>
-		  <li role="presentation" ui-sref-active="active"><a href="#"><span class="glyphicon glyphicon-headphones" aria-hidden="true">Meeting</span></a></li>
-		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.prescription({ cref: wf._id })"><span class="glyphicon glyphicon-th-list" aria-hidden="true">Prescription</span></a></li>
-		  <li role="presentation" ui-sref-active="active"><a href="#"><span class="glyphicon glyphicon-comment" aria-hidden="true">Feedback</span></a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.appt({ cref: wf._id })"><i class="fa fa-calendar-check-o fa-2x"></i>Appt</a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.payment({ cref: wf._id })"><i class="fa fa-inr fa-2x"></i>Payment</a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.questions({ cref: wf._id })" ng-show="(wf | cwfStateTransitionAllowed : 'cwfGoToAdditionalQuestionsByUser') "><i class="fa fa-question-circle fa-2x"></i>Questions</a></li>
+		  <li role="presentation" ui-sref-active="active"><a href="#" ng-show="(wf | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' ) "><i class="fa fa-television fa-2x"></i>Meeting</a></li>
+		  <li role="presentation" ui-sref-active="active"><a ui-sref="consult_wf.prescription({ cref: wf._id })" ng-show="(wf | cwfStateTransitionAllowed : 'cwfGoToPrescriptionByUser' ) "><i class="fa fa-file-text fa-2x"></i>Prescription</a></li>
+		  <li role="presentation" ui-sref-active="active"><a href="#" ng-show="(wf | cwfStateTransitionAllowed : 'cwfFeedbackByUser' ) "><i class="fa fa-comment fa-2x"></i>Feedback</a></li>
 		</ul>
 	</div>
 	<!-- <div class="row">
@@ -42,7 +42,7 @@
 	<div class="row">
 		<div class="col-lg-3">
 			<h5>Reference No</h5>
-			<a href="#">{{wf._id}}</a>
+			<span class="text-primary">{{wf._id}}</span>
 		</div>
 		<div class="col-lg-6">
 			<div ui-view></div>
