--- a/client/app/user/partials/consult_wf_appt.html
+++ b/client/app/user/partials/consult_wf_appt.html
@@ -5,7 +5,7 @@
     <strong><a href="#">Status - {{wf.apptWF.apptStatus | cwfFilter:'appt'}}</a> on {{wf.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}} </strong>
     
     <div>
-        <form class="form-inline">
+        <!-- <form class="form-inline">
             <div class="form-group">
                 <label class="control-label"><i class="fa fa-calendar"></i>Want to reschedule?</label><br>
                 <div class="form-group">
@@ -16,14 +16,34 @@
                   <input type="text" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
                   placeholder="Time" bs-timepicker>
                 </div>
+                <div class="form-group">
+                  <input type="text" size="10" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
+                  data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
+                </div>
+                <div class="form-group">
+                  <input type="text" size="8" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
+                  placeholder="Time" bs-timepicker>
+                </div>
                 <button type="submit" class="btn btn-primary">Reschedule</button>
             </div>
-        </form>
+        </form> -->
     </div>
     
     <div>
-        <h3>Patient Information</h3>
-        <form> 
+        <!-- <h3>Patient Information</h3> -->
+        <form>
+            <div class="form-group">
+                <label class="control-label"><i class="fa fa-calendar"></i>Appointment Date/Time</label><br>
+                <div class="form-group">
+                  <input type="text" size="10" class="form-control" ng-model="wf.apptWF.requestedTS" data-autoclose="1" 
+                  data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
+                </div>
+                <div class="form-group">
+                  <input type="text" size="8" class="form-control" ng-model="wf.apptWF.requestedTS" data-autoclose="1" 
+                  placeholder="Time" bs-timepicker>
+                </div> 
+            </div>
+            
             <div class="form-group">
                 <label for="exampleInputName">Name</label>
                 <input type="text" class="form-control" id="exampleInputName" ng-model="wf.patientDetailsWF.patientName" placeholder="Enter Your Name">
