--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -1,13 +1,37 @@
 <!-- Marketing messaging and featurettes
       ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
-<link rel="stylesheet" href="/bower_components/fullcalendar/fullcalendar.css"/>
+<!-- <link rel="stylesheet" href="/bower_components/fullcalendar/fullcalendar.css"/> -->
 <div class="container marketing" ng-controller="DocProfileCtrl">
 	<hr class="visual-profile">
 	<div class="row">
         <div class="col-md-5">
-            <img class="featurette-image img-responsive" src="/img/doc_profile_default2.png" alt="Generic placeholder image">
-            <!-- <img class="featurette-image img-responsive" my-holder="holder.js/300x200/auto" alt="Generic placeholder image"> -->
+            <div>
+                <img class="featurette-image img-responsive" src="/img/doc_profile_default2.png" alt="Generic placeholder image">
+                <!-- <img class="featurette-image img-responsive" my-holder="holder.js/300x200/auto" alt="Generic placeholder image"> -->
+            </div>
+            <div>
+                <h4>Education</h4>
+                <p>{{provider.education.strucHead}}</p>
+                <p>{{provider.education.strucDesc}}</p>
+                <ul>
+                    <li ng-repeat="value in provider.education.strucValues">
+                            <p>{{value}}</p>
+                    </li>
+                </ul>
+                <p>{{provider.education.strucFoot}}</p>
+            </div>
+            <div>
+                <h4>Registration</h4>
+                <p>{{provider.registration.strucHead}}</p>
+                <p>{{provider.registration.strucDesc}}</p>
+                <ul>
+                    <li ng-repeat="value in provider.registration.strucValues">
+                            <p>{{value}}</p>
+                    </li>
+                </ul>
+                <p>{{provider.registration.strucFoot}}</p>
+            </div>
         </div>
         <div class="col-md-7">
             <div>
@@ -23,7 +47,7 @@
                 <div ng-if="userIsProvider===false" class="btn-group" role="group" aria-label="Appointment">
                   <button type="button" class="btn btn-primary" ng-click="beginWF()">Begin Appointment by Video</button>
                   <button type="button" class="btn btn-default" ng-click="beginWF()" disabled="disabled">Begin Appointment by Phone</button>
-                  <button type="button" class="btn btn-default" ng-click="beginWF()" disabled="disabled">Begin Appointment by Email</button>
+                  <!-- <button type="button" class="btn btn-default" ng-click="beginWF()" disabled="disabled">Begin Appointment by Email</button> -->
                 </div>
                 <!-- <a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a> -->
             </div>
@@ -32,8 +56,6 @@
 	</div>
 
 	<hr class="featurette-divider">
-
-    <!-- Three columns of text below the carousel -->
 
     <div class="row">
         <div>
@@ -61,12 +83,21 @@
                 <p> Monday to Friday - Anytime after 10 am </p>
                 <p>Saturday - Between 8 am - 4 pm</p>
                 <p>Sunday - No new consultation. But if you are existing patient, then request for appointment</p> -->
-                <div ng-repeat="timingSnippet in provider.timing">
+                <!-- <div ng-repeat="timingSnippet in provider.timing">
                     <p>{{timingSnippet}}</p>
-                </div>
+                </div> -->
+                <p><strong>Monday - </strong> {{provider.calStruc.mon}}</p>
+                <p><strong>Tue - </strong> {{provider.calStruc.tue}}</p>
+                <p><strong>Wed - </strong> {{provider.calStruc.wed}}</p>
+                <p><strong>Thu - </strong> {{provider.calStruc.thu}}</p>
+                <p><strong>Fri - </strong> {{provider.calStruc.fri}}</p>
+                <p><strong>Sat - </strong> {{provider.calStruc.sat}}</p>
+                <p><strong>Sun - </strong> {{provider.calStruc.sun}}</p>
+                <!-- <p><strong> Exceptions - </strong> {{provider.calStruc.exc}}</p> -->
+
             </div>
             <div class="col-lg-3">
-                <h3><i class="fa fa-plus-square"></i>Services</h3>
+                <h3><i class="fa fa-plus-square"></i>Specialty</h3>
                 <!-- <img class="img-square" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
 
                 <!-- <img class="img-square" src="/img/doc_profile_services_default.png" alt="Generic placeholder image" style="width: 240px; height: 140px;"> -->
@@ -77,8 +108,8 @@
                 <p>Emergency Consultation</p>
                 <p>Package Treatment Options</p>
                 <p>Medicine Delivery</p> -->
-                <div ng-repeat="servicesSnippet in provider.servicesOffered">
-                    <p>{{servicesSnippet}}</p>
+                <div ng-repeat="specialtySnippet in provider.specialty">
+                    <p>{{specialtySnippet}}</p>
                 </div>
             </div>
             <div class="col-lg-3">
@@ -88,16 +119,66 @@
                 <!-- <h3>1. </h3>
                 <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div> -->
                 
-                <!-- <p> New Patient - INR 200 </p>
-                <p> Regular Patient - INR 150 </p>
-                <p> Followup Consultation - INR 100 </p> -->
-                <div ng-repeat="feeSnippet in provider.feeStructure">
+                
+                <p> Regular Consultation - {{provider.feeStruc.baseCurrency}} {{provider.feeStruc.regularFee + provider.feeStruc.platformFee}} </p>
+                <p> Followup Consultation - {{provider.feeStruc.baseCurrency}} {{provider.feeStruc.followupFee + provider.feeStruc.platformFee}} </p>
+                <!-- <div ng-repeat="feeSnippet in provider.feeStructure">
                     <p>{{feeSnippet}}</p>
-                </div>
+                </div> -->
             </div>
             
         </div>
     </div>
+
+    <hr class="featurette-divider">
+    <div><a class="link" href="#" ng-click="showMoreOrLess()"> {{more_less_text}}</a></div>
+    <div ng-show="showMoreFlag">
+        <div class='row'>
+            <div>
+                <h3>Awards/Recognitions</h3>
+                <p>{{provider.awardsRecognitions.strucHead}}</p>
+                <p>{{provider.awardsRecognitions.strucDesc}}</p>
+                <ul>
+                    <li ng-repeat="value in provider.awardsRecognitions.strucValues">
+                            <p>{{value}}</p>
+                    </li>
+                </ul>
+                <p>{{provider.awardsRecognitions.strucFoot}}</p>
+
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class='row'>
+            <div>
+                <h3>Experience</h3>
+                <p>{{provider.experience.strucHead}}</p>
+                <p>{{provider.experience.strucDesc}}</p>
+                <ul>
+                    <li ng-repeat="value in provider.experience.strucValues">
+                            <p>{{value}}</p>
+                    </li>
+                </ul>
+                <p>{{provider.experience.strucFoot}}</p>
+
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class='row'>
+            <div>
+                <h3>Membership</h3>
+                <p>{{provider.membership.strucHead}}</p>
+                <p>{{provider.membership.strucDesc}}</p>
+                <ul>
+                    <li ng-repeat="value in provider.membership.strucValues">
+                            <p>{{value}}</p>
+                    </li>
+                </ul>
+                <p>{{provider.membership.strucFoot}}</p>
+
+            </div>
+        </div>
+    </div>
+    <hr class="featurette-divider">
     <!-- /.row -->
     <div class="row" ng-if="userIsProvider===true">
         <div class="alert alert-success" role="alert">
