--- a/client/app/user/partials/userLanding.html
+++ b/client/app/user/partials/userLanding.html
@@ -18,7 +18,7 @@
                                     
                                     <div class="btn-group" role="group" aria-label="...">
                                         <a type="button" class="btn btn-success" ui-sref="consult_wf.appt({ cref: appt._id })">See Details</a>
-                                        <a type="button" class="btn btn-primary" ng-click="gotoCRoom(appt)">Goto Consultation Room</a>
+                                        <a type="button" class="btn btn-primary" ng-click="gotoCRoom(appt)" ng-show="(appt | cwfStateTransitionAllowed : 'cwfGoToMeetingRoomByUser' )">Goto Consultation Room</a>
                                     </div>
                                     <hr/>
                                 </div>
