--- a/client/app/user/partials/consult_wf_payment_return.html
+++ b/client/app/user/partials/consult_wf_payment_return.html
@@ -4,6 +4,10 @@
 		<div>
 	     
 	        <h3>Payment Completed !</h3>
+	        <p>Thank you for the consultation payment.</p>
+	        <p>Doctor's consultation room will be available when your appointment time nears</p>
+	        <p>Please <a ui-sref="consult_wf.questions({ cref: wf._id })">answer the additional questions</a> prior to your consultation</p>
+
 	        
 	    </div>
 
