--- a/client/app/user/partials/appt_request.html
+++ b/client/app/user/partials/appt_request.html
@@ -70,12 +70,12 @@
 	                    </div>
 
 	                </div> -->
-	                <div class="form-group">
+	                <!-- <div class="form-group">
 	                	<label>Doctor's <span class="text-primary" data-animation="am-flip-x" bs-tooltip title="{{prettyPrintedDocTiming}}">Timing</span> for reference</label>
 	                	<div>{{provider.timing}}</div>
-	                </div>
+	                </div> -->
 	                <div class="form-group">
-	                    <label class="control-label"><i class="fa fa-calendar"></i>When</label><br>
+	                    <label class="control-label"><i class="fa fa-calendar"></i>When</label> <small> ( See Doctor's <span class="text-primary" data-animation="am-flip-x" bs-tooltip title="{{prettyPrintedDocTiming}}">Timing</span> )</small><br>
 	                    <!-- <div class="form-group">
 	                      <input type="text" size="10" class="form-control" ng-model="wf.requestedTS" data-autoclose="1" 
 	                      data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
