--- a/client/app/user/partials/consultation_list.html
+++ b/client/app/user/partials/consultation_list.html
@@ -10,7 +10,9 @@
                     <p>On {{appt.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}}</p>
                     
                     
-                    <p> Status - <span class="text-muted">{{appt.apptWF.apptStatus}}</span> </p>
+                    <p> Apppointment - <span class="text-muted">{{appt.apptWF.apptStatus | cwfFilter:'appt'}}</span> </p>
+                    <p> Payment - <span class="text-muted">{{appt.paymentWF.paymentStatus | cwfFilter:'payment'}}</span> </p>
+                    <p> Consultation - <span class="text-muted">{{appt.meetingWF.meetingStatus | cwfFilter:'meeting'}}</span> </p>
                     <hr/>
                 </div>
             </div>
