--- a/client/app/user/partials/registration.html
+++ b/client/app/user/partials/registration.html
@@ -23,6 +23,9 @@
 				  </div>
 			  
 			  		<button type="submit" class="btn btn-primary">Register</button>
+			  		<div ng-show="subscriptionStatus">
+			  			<p> <span class="text-warning">{{subscriptionStatus}}</span></p>
+			  		</div>
 			  	</form>
 		  	</div>
 		  	<div class="panel-footer">
