--- a/client/app/user/partials/consult_wf_appt.html
+++ b/client/app/user/partials/consult_wf_appt.html
@@ -2,7 +2,12 @@
 		
 <div>
     <h3>Appointment</h3>
-    <strong><a href="#">Status - {{wf.apptWF.apptStatus | cwfFilter:'appt'}}</a> on {{wf.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}} </strong>
+    <strong><a href="#">Status - {{wf.apptWF.apptStatus | cwfFilter:'appt'}}</a> for {{wf.apptWF.confirmedTS | date:'MMM d, y h:mm:ss a'}} </strong>
+    <div class="form-group">
+        <a class="btn btn-primary btn-xs" ng-show="(wf | cwfStateTransitionAllowed : 'apptConfirmByUser' )" ng-click="confirmCwf(wf)">Confirm Proposed Time</a>
+        <a class="btn btn-danger btn-xs" ng-show="(wf | cwfStateTransitionAllowed : 'apptCancelByUser' )" ng-click="cancelCwf(wf)">Cancel Appointment</a>
+    </div>
+
     
     <div>
         <!-- <form class="form-inline">
@@ -31,50 +36,73 @@
     
     <div>
         <!-- <h3>Patient Information</h3> -->
-        <form>
-            <div class="form-group">
-                <label class="control-label"><i class="fa fa-calendar"></i>Appointment Date/Time</label><br>
-                <div class="form-group">
-                  <input type="text" size="10" class="form-control" ng-model="wf.apptWF.requestedTS" data-autoclose="1" 
-                  data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
+        <div class="panel panel-success">
+          <div class="panel-body">
+            <div>
+                <div class="form-inline">
+                    <div class="form-group">
+                        <label class="control-label"><i class="fa fa-calendar"></i>Appointment Date/Time</label><br>
+                        <div class="form-group">
+                          <input type="text" size="10" class="form-control" ng-model="wf.apptWF.confirmedTS" data-autoclose="1" 
+                          data-min-date="today" data-max-date="{{untilDate}}" placeholder="Date" bs-datepicker>
+                        </div>
+                        <div class="form-group">
+                          <input type="text" size="8" class="form-control" ng-model="wf.apptWF.confirmedTS" data-autoclose="1" 
+                          placeholder="Time" bs-timepicker>
+                        </div> 
+                        <div class="form-group">
+                            <button class="btn btn-primary" type="submit" ng-show="(wf | cwfStateTransitionAllowed : 'apptRescheduleByUser' )" ng-click="rescheduleCwf(wf)">Reschedule</button>
+                            <!-- <a class="btn btn-primary" ng-show="(wf | cwfStateTransitionAllowed : 'apptRescheduleByUser' )" ng-click="rescheduleCwf(wf)">Reschedule2</a> -->
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="form-group">
-                  <input type="text" size="8" class="form-control" ng-model="wf.apptWF.requestedTS" data-autoclose="1" 
-                  placeholder="Time" bs-timepicker>
-                </div> 
             </div>
+          </div>
+        </div>
+        
+        <hr/>
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">Review/Change Other Information</h3>
+            </div>
+            <div class="panel-body">
+                <form>
             
-            <div class="form-group">
-                <label for="exampleInputName">Name</label>
-                <input type="text" class="form-control" id="exampleInputName" ng-model="wf.patientDetailsWF.patientName" placeholder="Enter Your Name">
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-xs-4">
-                        <label for="exampleInputAge">Age</label>
-                        <input type="text" class="form-control" id="exampleInputAge" ng-model="wf.patientDetailsWF.patientAge" placeholder="Your Age">
+                    <div class="form-group">
+                        <label for="exampleInputName">Name</label>
+                        <input type="text" class="form-control" id="exampleInputName" ng-model="wf.patientDetailsWF.patientName" placeholder="Enter Your Name">
                     </div>
-                    <div class="col-xs-8">
-                        <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios1" ng-model="wf.patientDetailsWF.patientSex" value="M" checked="{{wf.patientDetailsWF.patientSex == 'M'}}"/>
-                        Male
-                        </label>
-                        <label>
-                        <input type="radio" name="optionsRadios" id="optionsRadios2" ng-model="wf.patientDetailsWF.patientSex" value="F" checked="{{wf.patientDetailsWF.patientSex == 'F'}}" />
-                        Female
-                        </label>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <label for="exampleInputAge">Age</label>
+                                <input type="text" class="form-control" id="exampleInputAge" ng-model="wf.patientDetailsWF.patientAge" placeholder="Your Age">
+                            </div>
+                            <div class="col-xs-8">
+                                <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" ng-model="wf.patientDetailsWF.patientSex" value="M" checked="{{wf.patientDetailsWF.patientSex == 'M'}}"/>
+                                Male
+                                </label>
+                                <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios2" ng-model="wf.patientDetailsWF.patientSex" value="F" checked="{{wf.patientDetailsWF.patientSex == 'F'}}" />
+                                Female
+                                </label>
+                            </div>
+                        
                     </div>
-                
-            </div>
 
-            <div class="form-group">
-                <label for="problemDesc">Describe your problem</label>
-                <textarea class="form-control" id="problemDesc" rows="4" ng-model="wf.patientDetailsWF.answerText[0]" ></textarea>
-            </div>
+                    <div class="form-group">
+                        <label for="problemDesc">Describe your problem</label>
+                        <textarea class="form-control" id="problemDesc" rows="4" ng-model="wf.patientDetailsWF.answerText[0]" ></textarea>
+                    </div>
 
-            <!-- <button type="submit" class="btn btn-primary" ng-click="gotoPayment()">Pay Rs. 200</button> -->
-            <a class="btn btn-primary" ng-click="saveCwfState()">Save</a>
-        </form>
+                    <!-- <button type="submit" class="btn btn-primary" ng-click="gotoPayment()">Pay Rs. 200</button> -->
+                    <a class="btn btn-primary" ng-click="changeOtherInfo(wf)">Save Patient Information</a>
+                </form>
+            </div>
+        </div>
+        
 
     </div>
 </div>
