--- a/client/app/user/partials/doctor_profile.html
+++ b/client/app/user/partials/doctor_profile.html
@@ -45,8 +45,8 @@
                 <div class="col-lg-4"><a href="#">Reviews <span class="badge">6</span></a></div>
                 <div class="col-lg-4"><a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a></div> -->
                 <div ng-if="userIsProvider===false" class="btn-group" role="group" aria-label="Appointment">
-                  <button type="button" class="btn btn-primary" ng-click="beginWF()">Begin Appointment by Video</button>
-                  <button type="button" class="btn btn-default" ng-click="beginWF()" disabled="disabled">Begin Appointment by Phone</button>
+                  <button type="button" class="btn btn-primary" ng-click="beginWF()">Begin Appointment</button>
+                  
                   <!-- <button type="button" class="btn btn-default" ng-click="beginWF()" disabled="disabled">Begin Appointment by Email</button> -->
                 </div>
                 <!-- <a ng-if="userIsProvider===false" ng-click="beginWF()" class=" btn btn-primary">Begin Appointment</a> -->
